# Imbric

./: .flake8  .gitignore  .gitmodules  .qmlls.ini  AGENTS.md  HANDOVER.md  KOTLIN_TRANSITION_NOTES.md  LICENSE  LSP_CONFIGURATION_GUIDE.md  PERF_ROADMAP.md  README.md  build.gradle.kts  core-pack.xml  diffnote.txt  dircontextworflow.md  gradle.properties  imbric.desktop  imbric.prof  implementation_scraped_plan.md  index.md  main.py  main_headless.py  nfpm.yaml  opencode.json  patch_conflated.diff  poc_qthread.py  projectcontext.md  pyproject.toml  pyrightconfig.json  repomix-core-pack.xml  requirements.txt  test_cursor_qwidget.py  test_gio_mounts.py  test_mouse.patch  test_tap_nesting.py
application/: application_context.md  imbric.desktop  main_window.py  qtquickcontrols2.conf
assets/: poc_async.py  qml_refactor_guide.md  structure template.md
core/: clipboard_manager.py  core_context.md  diagnostics.py  dir_context.md  file_monitor.py  file_operations.py  file_properties.py  file_workers.py  metadata_utils.py  operation_validator.py  registry.py  search.py  search_worker.py  selection_helper.py  shortcuts.py  sorter.py  temp_random_file.py  transaction.py  transaction_manager.py  trash_manager.py  trash_workers.py  undo_manager.py
demo_gtk3/: main.py
docs/: backend_audit.md  implementation_plan.md  structure.md  todo.md
external-review/: DirState.kt  GioCoroutineBridge.kt  GioTypeMappers.kt  ListingStrategy.kt  PROBLEM.txt
manual_selection_demo/: Main.qml  main.py
md3_sys_demo/: Main.qml  hybrid_main.py  main.py  modern.qss
qt_gallery/: gallery.qml
(+484 files in other folders)
